--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -102,7 +102,7 @@
   </view> -->
 
   <view class="space"></view>
-  <navigator wx:if="{{!apiUserInfoMap.base.isSeller}}" url="/pages/fx/apply-status">
+  <!-- <navigator wx:if="{{!apiUserInfoMap.base.isSeller}}" url="/pages/fx/apply-status">
     <view class="menu-item">
       <view class="l">成为分销商</view>
       <image class="next" src="/images/icon/next.png"></image>
@@ -127,7 +127,7 @@
       <view class="l">佣金明细</view>
       <image class="next" src="/images/icon/next.png"></image>
     </view>
-  </navigator>
+  </navigator>-->
 
   <view class="space"></view>
   <navigator url="/pages/invoice/apply">
@@ -190,10 +190,10 @@
   <view class="line"></view>
 
   <view class="space"></view>
-  <view class="menu-item" bindtap="aboutUs">
+  <!--<view class="menu-item" bindtap="aboutUs">
     <view class="l">关于我们</view>
     <image class="next" src="/images/icon/next.png"></image>
-  </view>
+  </view>-->
   <view class="line"></view>
   <view wx:if="{{userMobile}}" class="menu-item">
     <view class="l">绑定手机</view>
@@ -224,9 +224,9 @@
     <image class="next" src="/images/icon/next.png"></image>
   </view> -->
 
-  <view class="space"></view>
-  <view class="version">EastWorld v {{version}}</view>
-  <view class="space"></view>
+  <!--<view class="space"></view>
+  <view class="version"></view>
+  <view class="space"></view>-->
 </view>
 
 <template is="apifmLogin" data="{{wxlogin: wxlogin}}" />
