--- a/pages/to-pay-order/index.wxml
+++ b/pages/to-pay-order/index.wxml
@@ -39,6 +39,7 @@
     </picker>
     <van-cell wx:if="{{peisongType == 'zq' && shopIndex != -1}}" title="电话" value="{{shops[shopIndex].linkPhone}}" is-link bind:click="callMobile" />
     <van-cell wx:if="{{peisongType == 'zq' && shopIndex != -1}}" title="地址" value="{{shops[shopIndex].address}}" is-link bind:click="goMap" />
+    <van-cell wx:if="{{peisongType == 'zq' && shopIndex != -1}}" title="营业时间" value="{{shops[shopIndex].openingHours}}" />
     <view class="address-box" wx:if="{{peisongType == 'kd' && isNeedLogistics > 0}}">
       <view class="add-address" hidden="{{curAddressData}}" bindtap="addAddress">
         <image src="/images/add-addr.png"></image>
