--- a/pages/to-pay-order/index.wxml
+++ b/pages/to-pay-order/index.wxml
@@ -27,11 +27,11 @@
       <view class="row-label">配送方式</view>
       <radio-group bindchange="radioChange">
         <label class="radio">
-          <radio value="kd" checked="{{peisongType == 'kd'}}" /> 快递费自理
+          <radio value="kd" checked="{{peisongType == 'kd'}}" /> 快递费到付
         </label>
-        <label class="radio">
+        <!--<label class="radio">
           <radio value="zq" checked="{{peisongType == 'zq'}}" /> 到店自取
-        </label>
+        </label>!-->
       </radio-group>
     </view>
     <picker wx:if="{{peisongType == 'zq' && shops}}" bindchange="shopSelect" value="{{shopIndex}}" range="{{shops}}" range-key="name">
