--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -47,6 +47,14 @@
   border-radius: 30rpx;
   padding-left: 32rpx; 
 }
+.goods-sells{
+  
+  overflow: hidden;
+  font-size: 24rpx;
+  padding: 24rpx 0;
+  color:#e64340;
+  margin-left: 24rpx;
+}
 .search image {
   width: 35rpx;
   height: 35rpx;
@@ -57,7 +65,7 @@
 }
 .goodsDynamic {
   position: absolute;
-  top: 110rpx;
+  top: 320rpx;
   left: 25rpx;
   width: 650rpx;
   background: rgba(0, 0, 0, 0.6);
@@ -67,11 +75,14 @@
   font-size: 24rpx;  
 }
 .goodsDynamic .swiper2 {
+
   width: 100%;
-  height: 32rpx;
+  height: 38rpx;
 }
 .goodsDynamic-item {
+  
   width: 100%;
+  
   display: flex;
   align-items: center;
 }
@@ -218,7 +229,7 @@
   margin-left: 24rpx;
 }
 .goods-box .goods-price{
-  width: 280rpx;
+  
   overflow: hidden;
   font-size: 24rpx;
   padding: 24rpx 0;
